# google___adk-samples

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.agents/skills/align-recipe-pyproject/: SKILL.md
.agents/skills/align-recipe-pyproject/scripts/: align_pyproject.py
.agents/skills/extract-python-environment-variables/: SKILL.md
.agents/skills/extract-python-environment-variables/scripts/: extract_env_vars.py
.agents/skills/extract-python-environment-variables/tests/: conftest.py  test_extract_env_vars.py
.agents/skills/generate-manifest/: SKILL.md
.agents/skills/generate-python-runnability-test/: SKILL.md
.agents/skills/generate-python-runnability-test/scripts/: generate_runnability_test.py
.agents/skills/prepare-python-recipe/: SKILL.md
.agents/skills/prepare-python-recipe/scripts/: check_folder_name.py
.agents/skills/scaffold-python-recipe/: SKILL.md
.agents/skills/scaffold-python-recipe/resources/templates/: .env.example  README.md  pyproject.toml
.agents/skills/scaffold-python-recipe/resources/templates/app/: agent.py  fast_api_app.py
.agents/skills/scaffold-python-recipe/resources/templates/app/app_utils/: __init__.py  telemetry.py  typing.py
.agents/skills/scaffold-python-recipe/resources/templates/tests/: test_runnability.py
.agents/skills/scaffold-python-recipe/resources/templates/tests/eval/: eval_config.json
.agents/skills/scaffold-python-recipe/resources/templates/tests/eval/evalsets/: README.md
.agents/skills/scaffold-python-recipe/resources/templates/tests/integration/: test_agent.py  test_server_e2e.py
.agents/skills/scaffold-python-recipe/resources/templates/tests/unit/: test_tools.py
.agents/skills/scaffold-python-recipe/scripts/: scaffold.py
.agents/skills/scaffold-python-recipe/tests/: conftest.py  test_scaffold.py
.agents/skills/scaffold-python-sample/: SKILL.md
.agents/skills/scaffold-python-sample/resources/templates/: .env.example  manifest.yaml  pyproject.toml
.agents/skills/scaffold-python-sample/resources/templates/app/: agent.py  fast_api_app.py
.agents/skills/scaffold-python-sample/resources/templates/tests/: test_runnability.py
.github/: CODEOWNERS  policy.yml
.github/schemas/: manifest-schema.json
.github/scripts/: check_env_vars.py  check_lockfile_hashes.py  check_recipe_pyproject.py  load_policy.py
.github/workflows/: _ai-pr-review-core.yml  _gemini-pr-review-core.yml  ai-cli.yml  ai-issue-automated-triage.yml  ai-issue-scheduled-triage.yml  ai-pr-review-correctness.yml  ai-pr-review-maintainability.yml  ai-pr-review-security.yml  dependabot-auto-merge.yml  gemini-cli.yml  gemini-pr-review-correctness.yml  gemini-pr-review-maintainability.yml  gemini-pr-review-security.yml  python-dependency-policy.yml  python-ruff.yml  python-tests.yml  python-validate-recipe.yml  test_templated_agent.yaml  tools-tests.yml  validate-lockfiles.yml  validate-manifest.yml  validate-manifests.yml  validate-python-recipe.yml
core/python/rag-agent-search/: .env.example  .gitignore  Makefile  manifest.yaml  pyproject.toml
core/python/rag-agent-search/app/: agent.py
core/python/rag-agent-search/infra/terraform/: agent_platform_search.tf  agent_platform_search_variables.tf  apis.tf
core/python/rag-agent-search/infra/terraform/scripts/: delete_data_connector.py  setup_data_connector.py
core/python/rag-agent-search/sample_data/: support_faq.txt
core/python/rag-agent-search/tests/integration/: test_agent.py
core/python/rag-vector-search/: .env.example  manifest.yaml  pyproject.toml
core/python/rag-vector-search/app/: __init__.py  agent.py  retrievers.py
core/python/rag-vector-search/data_ingestion/: README.md  pyproject.toml
core/python/rag-vector-search/data_ingestion/data_ingestion_pipeline/: pipeline.py  submit_pipeline.py
core/python/rag-vector-search/infra/terraform/: variables.tf  vector_search_iam.tf  vector_search_variables.tf
core/python/rag-vector-search/infra/terraform/scripts/: delete_vector_search_collection.py  setup_vector_search_collection.py
core/python/rag-vector-search/infra/terraform/vars/: env.tfvars
core/python/rag-vector-search/tests/integration/: test_agent.py
core/rag-agent-search/: .env.example  AGENTS.md  README.md  manifest.yaml  pyproject.toml
core/rag-agent-search/app/: agent.py  retrievers.py
core/rag-agent-search/infra/terraform/: datastore_outputs.tf  providers.tf  variables.tf
core/rag-agent-search/infra/terraform/scripts/: get_data_store_id.py  start_connector_run.py
core/rag-agent-search/infra/terraform/vars/: env.tfvars
core/rag-agent-search/sample_data/: product_catalog.txt
core/rag-agent-search/tests/: test_runnability.py
core/rag-vector-search/: AGENTS.md  Makefile  README.md  manifest.yaml
core/rag-vector-search/data_ingestion/: README.md
core/rag-vector-search/data_ingestion/data_ingestion_pipeline/components/: ingest_data.py  process_data.py
core/rag-vector-search/deployment/: cloudbuild.yaml
core/rag-vector-search/infra/terraform/: datastore_outputs.tf  locals.tf  providers.tf  vector_search.tf
docs/: recipe-guideline.md  recipe-guidelines.md
docs/recipe-guidelines/: README.md  design-and-naming.md  environment-variables.md  manifest.md  quick-update.md  required-files.md  testing.md  tooling-and-ci.md
python/agents/: README.md
python/agents/medical-pre-authorization/: pyproject.toml
python/agents/medical-pre-authorization/eval/data/: test_config.json
python/agents/medical-pre-authorization/medical_pre_authorization/: __init__.py
python/agents/travel-concierge/: pyproject.toml
python/agents/workflow-dynamic/: pyproject.toml
python/agents/workflow-dynamic/app/: agent.py  fast_api_app.py
python/agents/workflow-dynamic/app/app_utils/: telemetry.py
tools/: README.md  validate.py  validate_manifest.py
tools/tests/: test_validate.py  test_validate_manifest.py
