[project]
name = "adk-samples-tools"
version = "0.1.0"
requires-python = ">=3.11"
authors = [
  { name = "Shahin Saadati", email = "shahins@google.com" },
]
dependencies = [
  "pyyaml",
  "jsonschema",
]

[project.scripts]
validate = "validate:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.uv.index]]
url = "https://pypi.org/simple/"
default = true

[tool.hatch.build.targets.wheel]
packages = ["tools"]

[tool.hatch.build.targets.wheel.sources]
"tools" = ""

[tool.ruff]
line-length = 80
target-version = "py310"

[tool.ruff.lint]
select = [
    "E", # pycodestyle
    "F", # pyflakes
    "I", # isort
    "C", # flake8-comprehension
    "PL", # Pylint rules
    "B", # flake8-bugbear
    "UP", # pyupgrade
    "RUF" # ruff specific rules
]
ignore = [
    "E501", # Ignore line length for long LLM prompts
    "PLR0913" # Allow agents to have many arguments if needed
]

[tool.ruff.lint.per-file-ignores]
# Global rule: ADK agents use __init__.py to expose their logic
"**/__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.codespell]
ignore-words-list = "rouge"
skip = "./locust_env/*,uv.lock,.venv,./frontend,**/*.ipynb"
