[project]
name = "adk-samples-tools"
version = "0.1.0"
requires-python = ">=3.11"
authors = [
  { name = "Shahin Saadati", email = "shahins@google.com" },
]
dependencies = [
  "pyyaml",
  "jsonschema",
]

[project.scripts]
validate = "validate:main"

[dependency-groups]
# Test-only dependencies for the repo tooling (tools/) and skill scripts
# (.agents/skills/*/scripts/). Install with `uv sync --dev`.
dev = [
  "pytest>=8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Use public PyPI as the default index for this project.
[[tool.uv.index]]
url = "https://pypi.org/simple/"
default = true

[tool.hatch.build.targets.wheel]
packages = ["tools"]

[tool.hatch.build.targets.wheel.sources]
"tools" = ""

[tool.ruff]
line-length = 80
target-version = "py310"

[tool.ruff.lint]
select = [
    "E", # pycodestyle
    "F", # pyflakes
    "I", # isort
    "C", # flake8-comprehension
    "PL", # Pylint rules
    "B", # flake8-bugbear
    "UP", # pyupgrade
    "RUF" # ruff specific rules
]
ignore = [
    "E501",    # Long LLM prompts and log messages need long strings
    "PLR0913", # Agents and tools legitimately have many parameters
    "PLR2004", # HTTP status codes (200, 422) are universally understood
    "PLC0415", # Deferred imports in tests are valid for ADK recipe side effects
]

[tool.ruff.lint.per-file-ignores]
# Global rule: ADK agents use __init__.py to expose their logic
"**/__init__.py" = ["F401"]

[tool.ruff.lint.isort]
# Every Python recipe's package is named `app` by convention, so isort should
# treat it as first-party across the whole repo. Hoisted here so recipe
# pyproject.toml files no longer need their own [tool.ruff*] block (see the
# A1 check in .github/workflows/python-validate-recipe.yml).
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
# importlib mode avoids sys.path pollution and lets same-named test files
# coexist across skills without collection collisions.
addopts = "--import-mode=importlib"
# Only the repo tooling and skill scripts are tested here. Recipe tests under
# core/ and contrib/ have their own per-recipe suites (see python-tests.yml).
testpaths = [
  "tools/tests",
  ".agents/skills",
]
# Never descend into skill template payloads or virtualenvs. The scaffold
# skill ships template test files under resources/templates/tests/ that contain
# unresolved <PLACEHOLDER> tokens and must NOT be collected as real tests.
norecursedirs = [
  "resources",
  ".venv",
  ".ruff_cache",
  "*.egg-info",
]

[tool.codespell]
ignore-words-list = "rouge"
skip = "./locust_env/*,uv.lock,.venv,./frontend,**/*.ipynb"
