[project]
name = "rag-agent-search"
version = "0.1.0"
description = "RAG agent grounded on Agent Platform Search (Discovery Engine) with a GCS data connector"
authors = [{ name = "Google LLC" }]
license = { text = "Apache License 2.0" }
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "google-adk[gcp]>=2.0.0,<3.0.0",
    "google-cloud-aiplatform[evaluation]>=1.156.0",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.23.8",
]

[project.optional-dependencies]
eval = ["google-adk[eval]>=2.0.0,<3.0.0"]
lint = ["ruff>=0.4.6", "codespell>=2.2.0"]

[tool.pytest.ini_options]
pythonpath = "."

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Use public PyPI as the default index for this recipe.
[[tool.uv.index]]
url = "https://pypi.org/simple/"
default = true

[tool.hatch.build.targets.wheel]
packages = ["app"]
