[project]
name = "rag-vector-search"
version = "0.1.0"
description = "RAG agent grounded on Agent Platform Vector Search (VS 2.0) with a KFP ingestion pipeline"
authors = [{ name = "Google LLC" }]
license = { text = "Apache License 2.0" }
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "google-adk[gcp]>=2.0.0,<3.0.0",
    "google-cloud-aiplatform[evaluation]>=1.156.0",
    "google-cloud-vectorsearch>=0.4.0",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.23.8",
]

[project.optional-dependencies]
eval = ["google-adk[eval]>=2.0.0,<3.0.0"]
lint = ["ruff>=0.4.6", "codespell>=2.2.0"]

[tool.ruff]
line-length = 80
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "C", "B", "UP", "RUF"]
ignore = ["C901", "B006"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pytest.ini_options]
pythonpath = "."

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
