[project]
name = "<RECIPE_NAME>"
version = "0.1.0"
requires-python = ">=3.11,<3.14"
dependencies = [
    "google-adk[gcp]>=2.0.0,<3.0.0",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
pythonpath = "."
# Integration tests require live credentials and are excluded from CI.
# Run them locally with: uv run pytest tests/integration
addopts = "--ignore=tests/integration"
